Update All The President's Visitors.ipynb
Center tags don't appear to be showing up, removing them for visual consistency.

--- a/All The President's Visitors.ipynb
+++ b/All The President's Visitors.ipynb
@@ -5,7 +5,7 @@
    "id": "0ede131f-0cbb-44c6-b34f-52cfee5624f3",
    "metadata": {},
    "source": [
-    "<h1 align=\"middle\">\n",
+    "<h1>\n",
     "    All the President's Visitors\n",
     "    </h1>"
    ]
@@ -15,11 +15,9 @@
    "id": "5ea1a3bc-bcae-46ad-a512-d37b38d4f110",
    "metadata": {},
    "source": [
-    "<center>\n",
     "<img src=\"https://live.staticflickr.com/2503/4217661984_fec1fcdf69_b.jpg\" alt=\"White House\" width=\"720\" height=\"576\">\n",
-    "</center>\n",
     "\n",
-    "<center class=\"attribution\">\"<a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://www.flickr.com/photos/59908088@N00/4217661984\">White House</a>\" by <a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://www.flickr.com/photos/59908088@N00\">Tom Lohdan</a> is licensed under <a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://creativecommons.org/licenses/by/2.0/?ref=openverse\">CC BY 2.0 <img src=\"https://mirrors.creativecommons.org/presskit/icons/cc.svg\" style=\"height: 1em; margin-right: 0.125em; display: inline;\"></img><img src=\"https://mirrors.creativecommons.org/presskit/icons/by.svg\" style=\"height: 1em; margin-right: 0.125em; display: inline;\"></img></a>. </center>"
+    "<p class=\"attribution\">\"<a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://www.flickr.com/photos/59908088@N00/4217661984\">White House</a>\" by <a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://www.flickr.com/photos/59908088@N00\">Tom Lohdan</a> is licensed under <a target=\"_blank\" rel=\"noopener noreferrer\" href=\"https://creativecommons.org/licenses/by/2.0/?ref=openverse\">CC BY 2.0 <img src=\"https://mirrors.creativecommons.org/presskit/icons/cc.svg\" style=\"height: 1em; margin-right: 0.125em; display: inline;\"></img><img src=\"https://mirrors.creativecommons.org/presskit/icons/by.svg\" style=\"height: 1em; margin-right: 0.125em; display: inline;\"></img></a>. </p>"
    ]
   },
   {
