Update All The President's Visitors.ipynb

--- a/All The President's Visitors.ipynb
+++ b/All The President's Visitors.ipynb
@@ -2051,7 +2051,7 @@
     "#### `Total_People` is entered inconsistently.\n",
     "Total_People is entered as the same number for almost every person associated with a given appointment, but sometimes it's off by a few. For instance. 1157 total people should have 1157 rows associated with it, not 1155. \n",
     "\n",
-    "Perhaps the discrepancy arises because sometimes the visitee is counted as a person, and other times they are not. Given that \"1\" appears 219 times, it seems like the intent is to NOT count the visitee as a person. \n",
+    "Perhaps the discrepancy arises because sometimes the visitee is counted as a person, and other times they are not. Given that \"1\" appears 200+ times, it seems like the intent is to NOT count the visitee as a person. \n",
     "\n",
     "It would be too cumbersome to correct each entry for total_people, but I still want to use it for something. \n",
     "\n",
